# TAIC_smart_assistant

./: .env.example  .gitignore  Dockerfile  README.md  app.py  assistant.py  manage_vector_db.ipynb  pyproject.toml  searching.py  startup.sh  usage_logs.ipynb
.github/workflows/: ci.yml  deploy.yml  push_to_spaces.yml  test.yml  version-bump.yml
backend/: Assistant.py  AssistantTools.py  Searching.py  Storage.py  Version.py
static/: footer.html  styles.css  user-documentation.html
tests/: conftest.py  test_app.py  test_assistant.py  test_assistanttools.py  test_searching.py  test_storage.py
working_files/: README.md  conversation_migration.ipynb  download_vector_db.py  manage_vector_db.ipynb  usage_logs.ipynb
