[project]
name = "TAIC_smart_tools"
version = "0.5.2"
description = "An app that provides access to smart tools mainly a RAG agent which is built off a dataset of TAIC, ATSB and TSB reports to assist investigators and researchers."
authors = [{ name = "1jamesthompson1", email = "1jamesthompson1@gmail.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "gradio>=5.26.0,<6",
    "python-dotenv>=1.0.1,<2",
    "openai>=1.55.1,<2",
    "lancedb>=0.25.0,<0.26.0",
    "rich>=13.9.4,<14",
    "authlib>=1.3.2,<2",
    "fastapi[standard]>=0.115.6,<0.116",
    "starlette[full]>=0.41.0,<0.42",
    "azure-data-tables>=12.6.0,<13",
    "gradio-rangeslider>=0.0.8,<0.0.9",
    "pydantic>=2.10.6,<3",
    "plotly>=6.0.1,<7",
    "openpyxl>=3.1.5,<4",
    "azure-storage-blob>=12.25.1,<13",
    "azure-ai-inference>=1.0.0b9",
    "uvicorn>=0.34.2,<0.35",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "notebook>=7.4.4,<8",
    "pytest>=8.0.0,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "pytest-asyncio>=0.24.0,<0.25",
    "pre-commit>=3.0.0,<4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=backend",
    "--cov-report=term-missing"
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "N999"]  # line too long, handled by formatter
per-file-ignores = {"tests/*.py" = ["S101"], "**/*.ipynb" = ["T201"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
